# ComfyUI_YFG_Comical

./: .gitignore  MonoClip.py  README.md  RandomImageFromDirectory.py  RandomOrg.py  RandomOrgV2.py  VAEDecodePreview.py  YFGRandomPromptFromFile.py  __init__.py  helloworld.py  image2Base64node.py  image2contrastmask.py  image2halftone.py  image2histogram.py  image2histograms.py  image2histogramsSelf.py  image2histogramscompact.py  image3switcher.py  images2sidebyside.py  pixelart.py  pyproject.toml  random_org_api_key_example.json  smartcheckpointloader.py  textMaskOverlay.py  text_overlay.py  yfg_dir_history.json  yfg_display_value.py  yfg_file_history.json
.github/workflows/: publish_action.yml
civitai_metasave/: __init__.py
civitai_metasave/.cache/: model_hash_cache.json
civitai_metasave/modules/: __init__.py  capture.py  config.py  hook.py  node.py  trace.py
civitai_metasave/modules/defs/: __init__.py  captures.py  formatters.py  meta.py  samplers.py  validators.py
libs/: image.py
loaders/: image2imgbb.py  imgbbLoader.py  imgbb_api_key_example.json  smartcheckpointloader.py
py/_nodes/: image2histogram_v1.py  image2histograms_compact_v1.py  image2histograms_v2.py  memeGenerator_v1.py
py/inc/: histogram.py
switchers/: image3switcher.py  imageSwitchers.py
web/js/: RandomImageFromDirectory.js  RandomOrgV2.js  RandomPromptFromFile.js  YFGLivePreviewPanel.js  storeURL.js  yfg_display_value.js  yfg_power_lora_extras.js
workflows/: ComfyUI_YFG_Comical-Example-Workflow.json  ComfyUI_YFG_Comical-Text-Mask-Overlay-Workflow.json
(+4 files in other folders)
